[gd_scene load_steps=9 format=3 uid="uid://1c8om7gpic31"]

[ext_resource type="Script" uid="uid://bh8ha7c2g46k4" path="res://scripts/UI/main_menu_tabs.gd" id="1_5jstl"]
[ext_resource type="Script" uid="uid://csksmfp54k53b" path="res://scripts/UI/main_menu.gd" id="1_qwnig"]
[ext_resource type="FontFile" uid="uid://u14gsqgyp28w" path="res://assets/Fonts/PressStart2P-Regular.ttf" id="2_yonvy"]
[ext_resource type="Script" uid="uid://c2jrltn5lx5ma" path="res://scripts/UI/setup.gd" id="4_e2p27"]
[ext_resource type="Script" uid="uid://b50mc27j11o7u" path="res://scripts/UI/game_button.gd" id="4_ngj32"]
[ext_resource type="Texture2D" uid="uid://ca7kmwf3vjups" path="res://assets/UI/playstation-series_sheet_double.png" id="4_tfcbk"]
[ext_resource type="PackedScene" uid="uid://cbf0hmtootka" path="res://scenes/Games/rock_paper_scissors.tscn" id="5_bm8t2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e2p27"]
atlas = ExtResource("4_tfcbk")
region = Rect2(512, 1408, 128, 128)

[node name="HomeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="MainMenuTabs" type="TabContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
current_tab = 0
tabs_visible = false
script = ExtResource("1_5jstl")

[node name="MainMenu" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs"]
custom_minimum_size = Vector2(275, 275)
layout_mode = 2
script = ExtResource("1_qwnig")
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 10.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="Title" type="Label" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 1.1
theme_override_fonts/font = ExtResource("2_yonvy")
theme_override_font_sizes/font_size = 32
text = "JoshBox"
horizontal_alignment = 1

[node name="Versus" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Versus
"

[node name="GameSelection" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Game Selection"

[node name="Tournament" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Tournament"

[node name="Setup" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Setup"

[node name="Settings" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Settings
"

[node name="Exit" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Exit
"

[node name="GameSelection" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs"]
visible = false
custom_minimum_size = Vector2(375, 375)
layout_mode = 2
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="RockPaperScissors" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
theme_override_font_sizes/font_size = 16
text = "Rock, Paper, Scissors"
script = ExtResource("4_ngj32")
game_scene = ExtResource("5_bm8t2")

[node name="Game2" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game3" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game4" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game5" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game6" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game7" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game8" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game9" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game10" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game11" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game12" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game13" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game14" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game15" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game16" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game17" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game18" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game19" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game20" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game21" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game22" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game23" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game24" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Game25" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_yonvy")
text = "?
"
script = ExtResource("4_ngj32")

[node name="Back" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_yonvy")
text = "Back"

[node name="Tournament" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="TODO" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs/Tournament"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Setup" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs" node_paths=PackedStringArray("device_info_p1", "device_icon_p1", "device_info_p2", "device_icon_p2")]
visible = false
layout_mode = 2
script = ExtResource("4_e2p27")
device_info_p1 = NodePath("Panel/VBoxContainer/Device Screens/LHS Setup/DeviceInfo")
device_icon_p1 = NodePath("Panel/VBoxContainer/Device Screens/LHS Setup/DeviceIcon")
device_info_p2 = NodePath("Panel/VBoxContainer/Device Screens/RHS Setup/DeviceInfo")
device_icon_p2 = NodePath("Panel/VBoxContainer/Device Screens/RHS Setup/DeviceIcon")
metadata/_tab_index = 3

[node name="Panel" type="Panel" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup"]
custom_minimum_size = Vector2(500, 350)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Device Screens" type="HBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LHS Setup" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/LHS Setup"]
layout_mode = 2
text = "Player 1"
horizontal_alignment = 1

[node name="DeviceIcon" type="TextureRect" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/LHS Setup"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
texture = SubResource("AtlasTexture_e2p27")
stretch_mode = 3

[node name="DeviceInfo" type="Label" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/LHS Setup"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="ConnectPlayer1" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/LHS Setup"]
layout_mode = 2
text = "Connect"

[node name="RHS Setup" type="VBoxContainer" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Header" type="Label" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/RHS Setup"]
layout_mode = 2
text = "Player 2"
horizontal_alignment = 1

[node name="DeviceIcon" type="TextureRect" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/RHS Setup"]
custom_minimum_size = Vector2(200, 150)
layout_mode = 2
texture = SubResource("AtlasTexture_e2p27")
stretch_mode = 3

[node name="DeviceInfo" type="Label" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/RHS Setup"]
layout_mode = 2
text = "-"
horizontal_alignment = 1

[node name="ConnectPlayer2" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/RHS Setup"]
layout_mode = 2
text = "Connect"

[node name="Back" type="Button" parent="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Back"

[node name="Settings" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="TODO" type="Control" parent="MarginContainer/CenterContainer/MainMenuTabs/Settings"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer/Versus" to="MarginContainer/CenterContainer/MainMenuTabs/MainMenu" method="_on_versus_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer/GameSelection" to="MarginContainer/CenterContainer/MainMenuTabs" method="_on_game_selection_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer/Setup" to="MarginContainer/CenterContainer/MainMenuTabs" method="_on_setup_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/MainMenu/VBoxContainer/Exit" to="MarginContainer/CenterContainer/MainMenuTabs/MainMenu" method="_on_exit_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/GameSelection/VBoxContainer/Back" to="MarginContainer/CenterContainer/MainMenuTabs" method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/LHS Setup/ConnectPlayer1" to="MarginContainer/CenterContainer/MainMenuTabs/Setup" method="_on_connect_player_1_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Device Screens/RHS Setup/ConnectPlayer2" to="MarginContainer/CenterContainer/MainMenuTabs/Setup" method="_on_connect_player_2_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/MainMenuTabs/Setup/Panel/VBoxContainer/Back" to="MarginContainer/CenterContainer/MainMenuTabs" method="_on_back_pressed"]
